--- a/src/styles.css
+++ b/src/styles.css
@@ -1,47 +1,322 @@
+::selection {
+  background: #ffbfb5;
+}
+
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin: 1% 5%;
-    background-color:E6F7FF;
+  font-family: "Bai Jamjuree", sans-serif;
+  background-color: #f2f1ef;
+  color: #161513;
+  overflow-x: hidden;
 }
 
-main {
-    display: grid;
-    grid-template-columns: 50% 50%;
-}
-
-
-.box {
-    box-shadow: .1em .1em .2em #80D4FF;
-    border-radius: .4em;
-    border-width: .01em;
-    border-style: solid;
-    margin-left: .4em;
-    padding: .0em .5em .1em .5em;
-    margin-bottom: .5em;
-    margin-top: .3em;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Bai Jamjuree", sans-serif;
+  font-weight: 600;
 }
 
 h1 {
-    color: navy;
-    margin: 0em;
-    display: block;
+  font-size: 3.5rem;
+}
+
+.main-h1 {
+  margin-top: 50px;
 }
 
 h2 {
-    color: navy;
-    font-size: 1.2em;
-    margin: 0em;
+  font-size: 2.75rem;
 }
 
 h3 {
-    color: navy;
-    font-size: 1em;
-    margin: 0em;
+  font-size: 2.25rem;
 }
 
-ul {
-    margin: 0em 0em .3em 0em;
-    list-style-type: square;
-    padding-left: 1.4em;
+h4 {
+  font-size: 1.75rem;
+}
+
+h5 {
+  font-size: 1.5rem;
+}
+
+h6 {
+  font-size: 1.25rem;
+}
+
+.nav-link {
+  font-weight: 600;
+  color: #161513;
+}
+
+.nav-link:hover {
+  color: #e94d35;
+}
+
+.profile-pic {
+  width: 45rem;
+  margin: -50px 0 0 0;
+  pointer-events: none;
+}
+
+.newsletter {
+  display: flex;
+  justify-content: center;
+  gap: 1em;
+  padding-top: 1em;
+}
+.icon-color {
+  color: #e94d35;
+}
+
+.btn-color {
+  color: #f2f1ef;
+  font-weight: 600;
+  background-color: #e94d35;
+}
+
+#sub-title {
+  color: #e94d35;
+  font-size: 0.75rem;
+}
+
+#aboutus {
+  margin-top: 8rem;
+}
+
+.container {
+  margin-bottom: 4rem;
+}
+
+.demo-effect {
+  background-color: #f2f1ef;
+}
+
+.demo-effect:hover {
+  background-color: #161513;
+  color: #f2f1ef;
+}
+
+.outer-img2 {
+  position: absolute;
+  pointer-events: none;
+}
+
+.outer-img1 {
+  position: absolute;
+  pointer-events: none;
+}
+
+.inner-img1 {
+  font-size: 36rem;
+  color: #f2f1ef;
+  position: relative;
+  float: right;
+  right: -950px;
+  top: -300px;
+  transform: rotate(10deg);
+  -webkit-text-stroke: 1px #e94d35;
+  z-index: -100;
+}
+
+.inner-img2 {
+  font-size: 32rem;
+  color: #f2f1ef;
+  position: relative;
+  float: left;
+  right: 350px;
+  top: -300px;
+  transform: rotate(110deg);
+  -webkit-text-stroke: 1px #e94d35;
+  z-index: -100;
+}
+
+.git-container {
+  height: 450px;
+}
+
+.ston {
+  margin-top: -5rem;
+  padding: 3rem;
+  background-color: #e6e3de;
+  height: 150px;
+}
+
+.footer {
+  background-color: #161513;
+  height: 300px;
+  color: #e6e3de;
+}
+
+.footer > .container > .icon-color {
+  color: #e6e3de;
+  padding: 1rem;
+  border-radius: 50%;
+}
+
+.copy-tag {
+  padding-top: 20px;
+}
+
+.footer-link {
+  padding-right: 2rem;
+}
+
+.footer-link-no {
+  margin-top: 1.25rem;
+  cursor: pointer;
+}
+
+.footer-link-no:hover {
+  color: #e94d35;
+}
+
+.social-icon {
+  background-color: #161513;
+  padding: 1rem;
+  border: 2px solid #e94d35;
+  border-radius: 50%;
+  margin: 5px;
+}
+
+.footer-icon {
+  padding-top: 150px;
+  margin-right: -10px;
+}
+
+.social-icon:hover {
+  background-color: #e6e3de;
+  color: #e94d35;
+}
+
+.animation {
+  transform: rotate(0deg);
+  animation-iteration-count: infinite;
+  animation-duration: 2s;
+  animation-name: example;
+  animation-timing-function: linear;
+}
+
+@keyframes example {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animation1 {
+  transform: rotate(0deg);
+  animation-iteration-count: infinite;
+  animation-duration: 10s;
+  animation-name: example1;
+  animation-timing-function: linear;
+}
+
+@keyframes example1 {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+  }
+
+  h4 {
+    font-size: 1.25rem;
+  }
+
+  .profile-pic {
+    width: 30rem;
+  }
+
+  .main-h1 {
+    margin: 0;
+  }
+
+  .ston {
+    text-align: center;
+    display: inline;
+    padding: 0;
+    margin: 0;
+  }
+
+  .inner-img1 {
+    right: -30rem;
+    top: -18rem;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  h1 {
+    font-size: 2rem;
+  }
+
+  h2 {
+    font-size: 1.75rem;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+  }
+
+  h4 {
+    font-size: 1rem;
+  }
+
+  .profile-pic {
+    width: 34rem;
+  }
+
+  .ston {
+    text-align: center;
+    display: inline;
+    padding: 0;
+    margin: 0;
+  }
+
+  .demo22 {
+    padding-top: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  h1 {
+    font-size: 3rem;
+  }
+
+  .profile-pic {
+    display: none;
+  }
+
+  .inner-img1 {
+    font-size: 20rem;
+    right: -12rem;
+    top: -2.5rem;
+  }
+
+  .inner-img2 {
+    font-size: 20rem;
+    right: 12.5rem;
+    top: 0rem;
+  }
 }
